--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "Simple Cors Proxy",
   "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "~4.4.3",
     "request": "~2.36.0",
